wp-content/themes/my-portfolio/style.css
/*
Theme Name: My Portfolio
Theme URI: http://amorphotograph.com
Description: A Wordpress custom portfolio theme
Author: Thomas Wilson
Author URI: http://thomaswilson.me
Version: 1.0
Tags: clean, light, responsive, two-column, custom-post-types, custom-fields, portfolio

License: GNU General Public License v2.0
License URI: http://www.gnu.org/licenses/gpl-2.0.html
*/

body {
    margin-top: 100px;
}

body.home {
    margin-top: 0;
    color: #555;
    font-family: 'garamound', serif; /* 1 */
}
        
#login {

    position: fixed;
    top: 100px;
    left: 42.5%;
    width: 400px;
    height: 300px;
    border: 1px solid #000;
    border-radius: 10px;
    background-color: #fff;
    padding: 50px;
}


/* ==========================================================================
   Typography
   ========================================================================== */

@font-face {
    font-family: 'GoudyItalic';
    src: url('css/webfonts/oflgoudystm-italic-webfont.eot');
    src: url('css/webfonts/oflgoudystm-italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('css/webfonts/oflgoudystm-italic-webfont.woff') format('woff'),
         url('css/webfonts/oflgoudystm-italic-webfont.ttf') format('truetype'),
         url('css/webfonts/oflgoudystm-italic-webfont.svg#ofl_sorts_mill_goudyitalic') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'GoudyRegular';
    src: url('css/webfonts/oflgoudystm-webfont.eot');
    src: url('css/webfonts/oflgoudystm-webfont.eot?#iefix') format('embedded-opentype'),
         url('css/webfonts/oflgoudystm-webfont.woff') format('woff'),
         url('css/webfonts/oflgoudystm-webfont.ttf') format('truetype'),
         url('css/webfonts/oflgoudystm-webfont.svg#ofl_sorts_mill_goudyregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

h1, h2 {
 	margin: 0;
 	}

h1 {
        font-family: 'Cinzel Decorative', 'cursive';
 	letter-spacing: -2px;
        font-size: 2em;
 	}

h2 {
 	font-family: 'Cinzel Decorative', 'cursive'; /* 1 */
 	font-weight: normal;
 	font-size: 1.25em;
 	line-height: 1em;
 	}

 h3 {
 	font-family: 'GoudyRegular';
 	text-transform: uppercase;
 	font-size: 2em;
 	line-height: 1.25em;
 	margin: 1% 0;
 	color: #000;
 }
 
 .featured-album {
     position: absolute;
     top: 60%;
     margin: 0 26%;
     width: 50%;
     color: #fff;
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
     text-align: center;
     padding: 10px;
 }
 
 .featured-album h3, .featured-album h4 {
     color: #fff;
 }
 
 h5 {
 	font-family: 'garamound', serif; /* 1 */
        text-transform: uppercase;
 	font-size: 1em;
 	line-height: 1em;
 	color: #474747;
 	padding: 0 0 0 0;
 	border-bottom: 1px solid #e6e6e6;
 }
 
 h6 {
    color: #474747;
    font-family: 'garamound', serif; /* 1 */
    font-weight: normal;
    font-size: 1em;
    line-height: 1.5em;
    text-align: left;
    margin: 20px 0;
    }

p {
        font-size: 1.25em;
 	line-height: 1.5em;
}
ul li {
    font-size: 1.15em;
}
a:hover {
    color: inherit;
}
.btn {
    font-family: 'garamound', serif; /* 1 */
    font-size: 1em;
    padding: 10px 25px;
    margin: 2% 0;
    display: inline-block;
    color: #fff;
}
.btn a {
    color: #fff;
}
.btn a:hover {
    color: #fff;
}

.dropshadow {
    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.35);
    -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.35);
    -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.35);
            
}

.fade {
   opacity: 0.5;
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
}

.fade:hover {
      opacity: 1;
}

hr {
    border: none;
    background-color: #e6e6e6;
    color: #e6e6e6;
    height: 1px;
}

/* ==========================================================================
   Header
   ========================================================================== */

.home .navbar-default {
    background-color: transparent;
    border: none;
}

.home .navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.home .navbar-default .navbar-nav>li>a {
    color: #fff;
}

.home .navbar-default .navbar-nav>li>a:hover {
    color: #fff;
}

header {
    padding: 10px;
}

header a:hover {
    text-decoration: none;
}

.nav>li>a, .nav>li>a {
    transition: font-size .5s, text-decoration .5s;
}

.nav>li>a:hover, .nav>li>a:focus {
    color: #000;
    text-decoration: underline;
    font-size: 1.2em;
}

nav a {
    font-family: 'Cinzel Decorative', cursive;
    font-size: 1em;
    color: #000;
}
        
.current-menu-item {
    text-decoration: underline;
    color: initial;
}

#logo a {
    color: #000;
    text-shadow: 0 0 5px rgba(0,0,0,0.5);
    
}

.home #logo a {
    color: #fff;
    text-shadow: 0 0 5px rgba(0,0,0,0.5);
    
}

/* ==========================================================================
   Homepage
   ========================================================================== */

.divider {
	margin: 4% 0 2% 0;
}

.flexslider {
    border: none;
}

/* Work ----------- */

        
.album img {
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
    border-radius: 2px;   
}
    
.flex-control-nav {
    visibility: hidden;
}


/* Testimonial ----------- */


    blockquote {
        font-family: 'garamound';
        font-size: 1.75em;
        margin: 4% 0;
        border-left: 10px solid #e3e3e3;
        padding-left: 4%;
        color: #474747;
    }
    cite {
        font-family: 'garamound', serif; /* 1 */
        font-style: normal;
        text-transform: capitalize;
        font-size: 1.25em;
        line-height: 1em;
        color: #474747;
        margin: 0 0 6% 4%;
     }

/* Articles ----------- */

article {
	text-align: left;
}
 ul.info {
	padding: 0;
 	font-size: 1em;
 }
 ul.info li {
 	list-style: none;
 	margin: 0 2% 0 0;
	padding: 1% 0;
        display: inline-block;
 }

 .post-link {
    font-family: "garamound";
 }
/* ... */

